Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27634

innodb_zip tests failing on s390x

    XMLWordPrintable

Details

    Description

      innodb_zip.* and innodb.innodb-16k tests are failing on s390x arch with the following error message:

      ER_TOO_BIG_ROWSIZE (1118): Row size too large (> 8126). Changing some columns to TEXT or BLOB may help. In current row format, BLOB prefix of 0 bytes is stored inline.
      

      I am attaching the full log of the tests.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              danyspin97 Danilo Spinella
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6.5h
                  6.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.